--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,23 @@
 *.lai
 *.la
 *.a
+
+.deps/
+autom4te.cache/
+lib/
+bin/
+obj/
+GHMjit.cbp
+GHMjit.depend
+GHMjit.layout
+missing
+depcomp
+stamp-*
+config.log
+config.status
+autoscan.log
+Makefile.in
+Makefile.am
+*.o
+gmhjit
+
